# seller_exhaustion

./: .env.example  .gitignore  AGENTS.md  AGENT_BASED_COACH_DESIGN.md  AGENT_FIXES.md  AGENT_QUICK_START.md  DEBUG_AGENT.md  DEPLOYMENT_OVERVIEW.md  EVOLUTION_COACH_GUIDE.md  FULL_GPU_PIPELINE_PROMPT.md  GPU_ACCELERATION_SETUP.md  GPU_FIX_SUMMARY.md  GPU_MULTIPROCESSING_FINAL.md  MULTIPROCESSING_GPU_FIX.md  Makefile  OPENAI_AGENTS_INTEGRATION.md  PRD.md  PRD_TRADING_AGENT.md  README.md  README_AGENT.md  SPECTRE_TRADING_FIXES.md  SPECTRE_TRADING_INTEGRATION.md  STRATEGY_EXPORT_GUIDE.md  ULTRA_DETAILED_TOOL_SPECIFICATIONS.md  VERIFY_GPU.sh  adam.sh  cli.py  debug_gpu.py  debug_gpu_signals.py  fix_epsilon.sh  pyproject.toml  test_agent.py  test_cli_adam.sh  test_cli_ga.sh  test_fib_fixes.py  test_gpu_fib_hybrid.py  test_json_parsing.py
app/: main.py  session_store.py  signals.py  theme.py
backtest/: coach_agent_executor.py  coach_agent_openai.py  coach_classic.py  coach_integration.py  coach_manager.py  coach_manager_blocking.py  coach_manager_openai.py  coach_mutations.py  coach_protocol.py  coach_session.py  coach_tools.py  coach_tools_agents.py  engine.py  engine_gpu.py  engine_gpu_batch.py  engine_gpu_full.py  engine_gpu_vectorized.py  gpu_manager.py  llm_coach.py  metrics.py  optimizer.py  optimizer_adam.py  optimizer_base.py  optimizer_evolutionary.py  optimizer_factory.py  optimizer_gpu.py  optimizer_gpu_pool.py  optimizer_multicore.py  optimizer_multicore_gpu.py  spectre_trading.py
coach_prompts/: README.md  agent.txt  agent01.txt  agent02.txt  async_coach_v1.txt  (+1 more)
(+80 files in other folders)
